--- a/index.ipynb
+++ b/index.ipynb
@@ -32,7 +32,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load necessary libraries and import the data\n"
+    "# Load necessary libraries and import the data\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "importa statsmode"
    ]
   },
   {
