Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,8 @@
     "# Load necessary libraries and import the data\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "importa statsmode"
+    "import statsmodel as sm\n",
+    "import "
    ]
   },
   {
