--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import statsmodel as sm\n",
-    "import "
+    "import matplotlib.pylot as plt\n"
    ]
   },
   {
