Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,7 @@
     "# Load necessary libraries and import the data\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import statm as sm\n",
+    "import stats as sm\n",
     "import matplotlib.pylot as plt\n",
     "%matplotlib inline"
    ]
