--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,8 @@
     "# Load necessary libraries and import the data\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import stats as sm\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
     "import matplotlib.pylot as plt\n",
     "%matplotlib inline"
    ]
