Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -128,7 +128,8 @@
     }
    ],
    "source": [
-    "# Check the columns and first few rows\n"
+    "# Check the columns and first few rows\n",
+    "pd.rea"
    ]
   },
   {
