Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -129,7 +129,7 @@
    ],
    "source": [
     "# Check the columns and first few rows\n",
-    "pd.rea"
+    "pd.read_csv(\"advertising.csv\")\n"
    ]
   },
   {
