--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,6 +67,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>TV</th>\n",
        "      <th>radio</th>\n",
        "      <th>newspaper</th>\n",
@@ -75,35 +76,40 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>230.1</td>\n",
        "      <td>37.8</td>\n",
        "      <td>69.2</td>\n",
        "      <td>22.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>44.5</td>\n",
        "      <td>39.3</td>\n",
        "      <td>45.1</td>\n",
        "      <td>10.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>17.2</td>\n",
        "      <td>45.9</td>\n",
        "      <td>69.3</td>\n",
        "      <td>9.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>151.5</td>\n",
        "      <td>41.3</td>\n",
        "      <td>58.5</td>\n",
        "      <td>18.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>180.8</td>\n",
        "      <td>10.8</td>\n",
        "      <td>58.4</td>\n",
@@ -114,22 +120,23 @@
        "</div>"
       ],
       "text/plain": [
-       "      TV  radio  newspaper  sales\n",
-       "1  230.1   37.8       69.2   22.1\n",
-       "2   44.5   39.3       45.1   10.4\n",
-       "3   17.2   45.9       69.3    9.3\n",
-       "4  151.5   41.3       58.5   18.5\n",
-       "5  180.8   10.8       58.4   12.9"
+       "   Unnamed: 0     TV  radio  newspaper  sales\n",
+       "0           1  230.1   37.8       69.2   22.1\n",
+       "1           2   44.5   39.3       45.1   10.4\n",
+       "2           3   17.2   45.9       69.3    9.3\n",
+       "3           4  151.5   41.3       58.5   18.5\n",
+       "4           5  180.8   10.8       58.4   12.9"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check the columns and first few rows\n",
-    "pd.read_csv(\"advertising.csv\")\n"
+    "df = pd.read_csv(\"advertising.csv\")\n",
+    "df.head()"
    ]
   },
   {
