--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,8 @@
     }
    ],
    "source": [
-    "# Get the 5-point statistics for data \n"
+    "# Get the 5-point statistics for data \n",
+    "df."
    ]
   },
   {
