--- a/index.ipynb
+++ b/index.ipynb
@@ -37,8 +37,8 @@
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.formula.api import ols\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "plt."
    ]
   },
   {
