--- a/index.ipynb
+++ b/index.ipynb
@@ -33,12 +33,13 @@
    "outputs": [],
    "source": [
     "# Load necessary libraries and import the data\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.formula.api import ols\n",
     "%matplotlib inline\n",
-    "plt."
+    "plt.st"
    ]
   },
   {
