--- a/index.ipynb
+++ b/index.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "import statsmodels.api as sm\n",
     "from statsmodels.formula.api import ols\n",
     "%matplotlib inline\n",
-    "plt.st"
+    "plt.style.use(\"ggplot\")"
    ]
   },
   {
