Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,8 @@
     }
    ],
    "source": [
-    "# For all the variables, check distribution by creating a histogram with kde\n"
+    "# For all the variables, check distribution by creating a histogram with kde\n",
+    "df."
    ]
   },
   {
