Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -332,7 +332,8 @@
     }
    ],
    "source": [
-    "# visualize the relationship between the preditors and the target using scatterplots\n"
+    "# visualize the relationship between the preditors and the target using scatterplots\n",
+    "fig, ax ="
    ]
   },
   {
