Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -332,8 +332,9 @@
     }
    ],
    "source": [
-    "# visualize the relationship between the preditors and the target using scatterplots\n",
-    "fig, ax ="
+    "# visualize the relationship between the preditors \n",
+    "# and the target using scatterplots\n",
+    "fig, ax = plt.subplot"
    ]
   },
   {
