Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,7 @@
    "source": [
     "# visualize the relationship between the preditors \n",
     "# and the target using scatterplots\n",
-    "fig, ax = plt.subplot"
+    "fig, ax = plt.subplots(nrows=1)"
    ]
   },
   {
