Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,8 @@
    "source": [
     "# visualize the relationship between the preditors \n",
     "# and the target using scatterplots\n",
-    "fig, ax = plt.subplots(nrows=1, ncols=3,)"
+    "fig, ax = plt.subplots(nrows=1, ncols=3)\n",
+    "fig.figure(figure)"
    ]
   },
   {
