--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
     "# visualize the relationship between the preditors \n",
     "# and the target using scatterplots\n",
     "fig, ax = plt.subplots(nrows=1, ncols=3)\n",
-    "fig.figure(figure)"
+    "fig.fig(fi)"
    ]
   },
   {
