Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -353,7 +353,7 @@
    "source": [
     "# visualize the relationship between the preditors \n",
     "# and the target using scatterplots\n",
-    "fig, ax = plt.subplots(nrows=1, ncols=3)\n",
+    "fig, ax = plt.subplots(nrows=1, ncols=3, sha)\n",
     "plt.figure(figsize=(8,12))"
    ]
   },
