Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -353,8 +353,7 @@
    "source": [
     "# visualize the relationship between the preditors \n",
     "# and the target using scatterplots\n",
-    "fig, ax = plt.subplots(nrows=1, ncols=3, sharey=True)\n",
-    "plt.figure(figsize=(8,12))"
+    "fig, ax = plt.subplots(nrows=1, ncols=3, sharey=True, figsize)\n"
    ]
   },
   {
