--- a/index.ipynb
+++ b/index.ipynb
@@ -346,9 +346,9 @@
     "# visualize the relationship between the preditors \n",
     "# and the target using scatterplots\n",
     "fig, ax = plt.subplots(nrows=1, ncols=3, sharey=True, figsize=(12,4))\n",
-    "ax[0,0] = plt.scatter(df.TV, df.sales)\n",
-    "ax[0,1] = plt.scatter(df.radio, df.sales)\n",
-    "ax[0,2] = plt.scatter(df.newspaper, df.sales)\n"
+    "ax[0,0].scatter(df.TV, df.sales)\n",
+    "ax[0,1].scatter(df.radio, df.sales)\n",
+    "ax[0,2] = .scatter(df.newspaper, df.sales)\n"
    ]
   },
   {
