--- a/index.ipynb
+++ b/index.ipynb
@@ -382,7 +382,7 @@
     "# import libraries\n",
     "\n",
     "# build the formula \n",
-    "f = \n",
+    "f = \"sales ~ TV\"\n",
     "# create a fitted model in one line\n"
    ]
   },
