Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,8 @@
     "\n",
     "# build the formula \n",
     "f = \"sales ~ TV\"\n",
-    "# create a fitted model in one line\n"
+    "# create a fitted model in one line\n",
+    "model = ols"
    ]
   },
   {
