Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -384,7 +384,7 @@
     "# build the formula \n",
     "f = \"sales ~ TV\"\n",
     "# create a fitted model in one line\n",
-    "model = ols"
+    "model = ols(f, df)"
    ]
   },
   {
