Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,16 +375,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import libraries\n",
     "\n",
     "# build the formula \n",
-    "f = \"sales ~ TV\"\n",
+    "formula = \"sales ~ TV\"\n",
     "# create a fitted model in one line\n",
-    "model = ols(f, df)"
+    "model = ols(formula, df)"
    ]
   },
   {
