Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
     "# build the formula \n",
     "formula = \"sales ~ TV\"\n",
     "# create a fitted model in one line\n",
-    "model = ols(formula, df)"
+    "model = ols(formula, df).fit()"
    ]
   },
   {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -414,10 +414,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   312.1</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Fri, 12 Oct 2018</td> <th>  Prob (F-statistic):</th> <td>1.47e-42</td>\n",
+       "  <th>Date:</th>             <td>Fri, 19 Jul 2019</td> <th>  Prob (F-statistic):</th> <td>1.47e-42</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>21:04:59</td>     <th>  Log-Likelihood:    </th> <td> -519.05</td>\n",
+       "  <th>Time:</th>                 <td>14:04:38</td>     <th>  Log-Likelihood:    </th> <td> -519.05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   200</td>      <th>  AIC:               </th> <td>   1042.</td>\n",
@@ -456,7 +456,7 @@
        "<tr>\n",
        "  <th>Kurtosis:</th>      <td> 2.779</td> <th>  Cond. No.          </th> <td>    338.</td>\n",
        "</tr>\n",
-       "</table>"
+       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
       ],
       "text/plain": [
        "<class 'statsmodels.iolib.summary.Summary'>\n",
@@ -466,8 +466,8 @@
        "Dep. Variable:                  sales   R-squared:                       0.612\n",
        "Model:                            OLS   Adj. R-squared:                  0.610\n",
        "Method:                 Least Squares   F-statistic:                     312.1\n",
-       "Date:                Fri, 12 Oct 2018   Prob (F-statistic):           1.47e-42\n",
-       "Time:                        21:04:59   Log-Likelihood:                -519.05\n",
+       "Date:                Fri, 19 Jul 2019   Prob (F-statistic):           1.47e-42\n",
+       "Time:                        14:04:38   Log-Likelihood:                -519.05\n",
        "No. Observations:                 200   AIC:                             1042.\n",
        "Df Residuals:                     198   BIC:                             1049.\n",
        "Df Model:                           1                                         \n",
@@ -489,12 +489,14 @@
        "\"\"\""
       ]
      },
-     "execution_count": 84,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "model.summary()"
+   ]
   },
   {
    "cell_type": "markdown",
