Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -539,7 +539,7 @@
    ],
    "source": [
     "# create a DataFrame with the minimum and maximum values of TV\n",
-    "df2 = pd.DataFrame([np])\n",
+    "df2 = pd.DataFrame([np.max(df.TV), np.mi])\n",
     "# make predictions for those x values and store them\n",
     "\n",
     "\n",
