--- a/index.ipynb
+++ b/index.ipynb
@@ -534,7 +534,7 @@
    ],
    "source": [
     "# create a DataFrame with the minimum and maximum values of TV\n",
-    "df2 = pd.DataFrame(data=[np.max(df.TV), np.min(df.TV)], columns=\"TV_maxmin\")\n",
+    "df2 = pd.DataFrame(data=[np.max(df.TV), np.min(df.TV)], index=[] columns=\"TV_maxmin\")\n",
     "# make predictions for those x values and store them\n",
     "\n",
     "\n",
