Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -511,21 +511,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-28-db4c6069149a>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-29-af8e4f4cbda4>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-db4c6069149a>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    df2 = pd.DataFrame(data=[np.max(df.TV), np.min(df.TV)], index=[0,1] columns=\"TV_maxmin\")\u001b[0m\n\u001b[0m                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-af8e4f4cbda4>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    df2 = pd.DataFrame(data=[np.max(df.TV), np.min(df.TV)], index=[0,1] columns=[\"TV_maxmin\"])\u001b[0m\n\u001b[0m                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# create a DataFrame with the minimum and maximum values of TV\n",
-    "df2 = pd.DataFrame(data=[np.max(df.TV), np.min(df.TV)], index=[0,1] columns=\"TV_maxmin\")\n",
+    "df2 = pd.DataFrame(data=[np.max(df.TV), np.min(df.TV)], index=[0,1] columns=[\"TV_maxmin\"])\n",
     "# make predictions for those x values and store them\n",
     "\n",
     "\n",
