--- a/index.ipynb
+++ b/index.ipynb
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -535,62 +535,29 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>TV</th>\n",
-       "      <th>radio</th>\n",
-       "      <th>newspaper</th>\n",
-       "      <th>sales</th>\n",
+       "      <th>TV_maxmin</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>296.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>230.1</td>\n",
-       "      <td>37.8</td>\n",
-       "      <td>69.2</td>\n",
-       "      <td>22.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>44.5</td>\n",
-       "      <td>39.3</td>\n",
-       "      <td>45.1</td>\n",
-       "      <td>10.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>17.2</td>\n",
-       "      <td>45.9</td>\n",
-       "      <td>69.3</td>\n",
-       "      <td>9.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>151.5</td>\n",
-       "      <td>41.3</td>\n",
-       "      <td>58.5</td>\n",
-       "      <td>18.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>180.8</td>\n",
-       "      <td>10.8</td>\n",
-       "      <td>58.4</td>\n",
-       "      <td>12.9</td>\n",
+       "      <td>0.7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      TV  radio  newspaper  sales\n",
-       "1  230.1   37.8       69.2   22.1\n",
-       "2   44.5   39.3       45.1   10.4\n",
-       "3   17.2   45.9       69.3    9.3\n",
-       "4  151.5   41.3       58.5   18.5\n",
-       "5  180.8   10.8       58.4   12.9"
+       "   TV_maxmin\n",
+       "0      296.4\n",
+       "1        0.7"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +566,7 @@
     "# create a DataFrame with the minimum and maximum values of TV\n",
     "df2 = pd.DataFrame(data=[np.max(df.TV), np.min(df.TV)], index=[0,1], columns=[\"TV_maxmin\"])\n",
     "# make predictions for those x values and store them\n",
-    "df.head()\n",
+    "df2.head()\n",
     "\n",
     "# first, plot the observed data and the least squares line"
    ]
