Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -567,7 +567,7 @@
     "df2 = pd.DataFrame(data=[np.max(df.TV), np.min(df.TV)], index=[0,1], columns=[\"TV_maxmin\"])\n",
     "# make predictions for those x values and store them\n",
     "df2.head()\n",
-    "model.\n",
+    "model.fi\n",
     "# first, plot the observed data and the least squares line"
    ]
   },
