Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -511,53 +511,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TV_maxmin</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>296.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   TV_maxmin\n",
-       "0      296.4\n",
-       "1        0.7"
+       "1      17.970775\n",
+       "2       9.147974\n",
+       "3       7.850224\n",
+       "4      14.234395\n",
+       "5      15.627218\n",
+       "6       7.446162\n",
+       "7       9.765950\n",
+       "8      12.746498\n",
+       "9       7.441409\n",
+       "10     16.530414\n",
+       "11     10.174765\n",
+       "12     17.238710\n",
+       "13      8.163966\n",
+       "14     11.667416\n",
+       "15     16.734822\n",
+       "16     16.321253\n",
+       "17     10.255578\n",
+       "18     20.409404\n",
+       "19     10.322129\n",
+       "20     14.034741\n",
+       "21     17.414596\n",
+       "22     18.317792\n",
+       "23      7.660077\n",
+       "24     17.885209\n",
+       "25      9.994126\n",
+       "26     19.529976\n",
+       "27     13.825579\n",
+       "28     18.446141\n",
+       "29     18.859710\n",
+       "30     10.388680\n",
+       "         ...    \n",
+       "171     9.409426\n",
+       "172    14.852371\n",
+       "173     7.964312\n",
+       "174    15.037764\n",
+       "175    17.604742\n",
+       "176    20.195489\n",
+       "177    18.840695\n",
+       "178    15.123330\n",
+       "179    20.185982\n",
+       "180    14.904661\n",
+       "181    14.476831\n",
+       "182    17.419349\n",
+       "183     9.704153\n",
+       "184    20.704131\n",
+       "185    19.097393\n",
+       "186    16.777605\n",
+       "187    13.663955\n",
+       "188    16.116846\n",
+       "189    20.628073\n",
+       "190     7.921529\n",
+       "191     8.910291\n",
+       "192    10.621610\n",
+       "193     7.850224\n",
+       "194    14.961705\n",
+       "195    14.148829\n",
+       "196     8.848493\n",
+       "197    11.510545\n",
+       "198    15.446579\n",
+       "199    20.513985\n",
+       "200    18.065848\n",
+       "Length: 200, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +591,7 @@
     "df2 = pd.DataFrame(data=[np.max(df.TV), np.min(df.TV)], index=[0,1], columns=[\"TV_maxmin\"])\n",
     "# make predictions for those x values and store them\n",
     "df2.head()\n",
-    "model.fi\n",
+    "model.fittedvalues\n",
     "# first, plot the observed data and the least squares line"
    ]
   },
