--- a/index.ipynb
+++ b/index.ipynb
@@ -590,8 +590,7 @@
     "# create a DataFrame with the minimum and maximum values of TV\n",
     "df2 = pd.DataFrame(data=[np.max(df.TV), np.min(df.TV)], index=[0,1], columns=[\"TV_maxmin\"])\n",
     "# make predictions for those x values and store them\n",
-    "df2.head()\n",
-    "model.fittedvalues\n",
+    "df.fittedmodel.fittedvalues\n",
     "# first, plot the observed data and the least squares line"
    ]
   },
