--- a/index.ipynb
+++ b/index.ipynb
@@ -590,7 +590,7 @@
     "# create a DataFrame with the minimum and maximum values of TV\n",
     "df2 = pd.DataFrame(data=[np.max(df.TV), np.min(df.TV)], index=[0,1], columns=[\"TV_maxmin\"])\n",
     "# make predictions for those x values and store them\n",
-    "df.fittedmodel.fittedvalues\n",
+    "df[\"fitted\"] = model.fittedvalues\n",
     "# first, plot the observed data and the least squares line"
    ]
   },
