--- a/index.ipynb
+++ b/index.ipynb
@@ -591,7 +591,8 @@
     "df2 = pd.DataFrame(data=[np.max(df.TV), np.min(df.TV)], index=[0,1], columns=[\"TV_maxmin\"])\n",
     "# make predictions for those x values and store them\n",
     "df[\"fitted\"] = model.fittedvalues\n",
-    "# first, plot the observed data and the least squares line"
+    "# first, plot the observed data and the least squares line\n",
+    "plt.plot()"
    ]
   },
   {
