Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -567,7 +567,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "fig, ax = plt.sub"
+   ]
   },
   {
    "cell_type": "code",
