Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -568,7 +568,7 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(nrows=2, ncols=2, f)\n",
     "ax"
    ]
   },
