Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -568,8 +568,8 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(nrows=2, ncols=2, f)\n",
-    "ax"
+    "fig, ax = plt.subplots(nrows=2, ncols=2, figsize=(12,8))\n",
+    "ax[0,]"
    ]
   },
   {
