--- a/index.ipynb
+++ b/index.ipynb
@@ -569,7 +569,7 @@
    ],
    "source": [
     "fig, ax = plt.subplots(nrows=2, ncols=2, figsize=(12,8))\n",
-    "ax[0,]"
+    "ax[0,0].scatter(df)"
    ]
   },
   {
