Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -579,7 +579,8 @@
    ],
    "source": [
     "fig, ax = plt.subplots(nrows=2, ncols=2, figsize=(12,8))\n",
-    "ax[0,0].scatter(df.TV, df.sales)\n"
+    "ax[0, 0].scatter(df.TV, df.sales)\n",
+    "ax[0, 0].plot(df.TV)"
    ]
   },
   {
