Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -582,7 +582,7 @@
     "fig, ax = plt.subplots(nrows=2, ncols=2, figsize=(12,8))\n",
     "ax[0, 0].scatter(df.TV, df.sales)\n",
     "ax[0, 0].plot(df.TV, df.fitted, c=\"blue\")\n",
-    "\n",
+    "ax[0, 0].set_title(\"TV vs S\")\n",
     "ax[0, 1]."
    ]
   },
