--- a/index.ipynb
+++ b/index.ipynb
@@ -583,7 +583,8 @@
     "ax[0, 0].scatter(df.TV, df.sales)\n",
     "ax[0, 0].plot(df.TV, df.fitted, c=\"blue\")\n",
     "ax[0, 0].set_title(\"TV vs Sales\")\n",
-    "ax[0, 1].scatter(df.TV, df.residual)"
+    "ax[0, 1].scatter(df.TV, df.residual)\n",
+    "ax[0, 1].set_title(\"TV vs Sales\")"
    ]
   },
   {
