Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -584,7 +584,7 @@
     "ax[0, 0].plot(df.TV, df.fitted, c=\"blue\")\n",
     "ax[0, 0].set_title(\"TV vs Sales\")\n",
     "ax[0, 1].scatter(df.TV, df.residual)\n",
-    "ax[0, 1].set_title(\"TV vs Sales\")"
+    "ax[0, 1].set_title(\"TV cs resi\")"
    ]
   },
   {
