Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -593,6 +593,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig = plt.figure(figsize=(15,8))\n",
+    "fig = sm.graphics.plot_regress_exog(model, \"TV\", fig=fig)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Record Your observations on heteroscedasticity"
    ]
   },
